added list + images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,25 @@
 	<div class="grid-item">7</div>
 	<div class="grid-item">8</div>
 	<div class="grid-item">9</div>
+	<div class="grid-item">10</div>
+	<div class="grid-item">11</div>
+	<div class="grid-item">12</div>
+
 </div>
+<ul>
+	<ol>v1 <img src="images/1.jpg" alt="image1"></ol>
+	<ol>v2 <img src="images/2.jpg" alt="image2"></ol>
+	<ol>v3 <img src="images/3.jpg" alt="image3"></ol>
+	<ol>v4 <img src="images/4.jpg" alt="image4"></ol>
+	<ol>v5 <img src="images/5.jpg" alt="image5"></ol>
+	<ol>v6 <img src="images/6.jpg" alt="image6"></ol>
+	<ol>v7 <img src="images/7.jpg" alt="image7"></ol>
+	<ol>v8 <img src="images/8.jpg" alt="image8"></ol>
+	<ol>v9 <img src="images/9.jpg" alt="image9"></ol>
+	<ol>v10 <img src="images/10.jpg" alt="image10"></ol>
+	<ol>v11 <img src="images/11.jpg" alt="image11"></ol>
+	<ol>v12 <img src="images/12.jpg" alt="image12"></ol>
+</ul>
 <script src="app.js"></script>
 </body>
 </html>
