--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 <body>
-	<div class="grid-container">
-	<div class="grid-item">1</div>
-	<div class="grid-item">2</div>
-	<div class="grid-item">3</div>
-	<div class="grid-item">4</div>
-	<div class="grid-item">5</div>
-	<div class="grid-item">6</div>
-	<div class="grid-item">7</div>
-	<div class="grid-item">8</div>
-	<div class="grid-item">9</div>
-	<div class="grid-item">10</div>
-	<div class="grid-item">11</div>
-	<div class="grid-item">12</div>
+	<div id="0" class="grid-container">
+	<div id="1" class="grid-item">1</div>
+	<div id="2" class="grid-item">2</div>
+	<div id="3" class="grid-item">3</div>
+	<div id="4" class="grid-item">4</div>
+	<div id="5" class="grid-item">5</div>
+	<div id="6" class="grid-item">6</div>
+	<div id="7" class="grid-item">7</div>
+	<div id="8" class="grid-item">8</div>
+	<div id="9" class="grid-item">9</div>
+	<div id="10" class="grid-item">10</div>
+	<div id="11" class="grid-item">11</div>
+	<div id="12" class="grid-item">12</div>
 
 </div>
 <ul>
@@ -35,8 +35,9 @@
 	<ol>v9 <img src="images/9.jpg" alt="image9"></ol>
 	<ol>v10 <img src="images/10.jpg" alt="image10"></ol>
 	<ol>v11 <img src="images/11.jpg" alt="image11"></ol>
-	<ol>v12 <img src="images/12.jpg" alt="image12"></ol>
+	<ol>v12 <img id="11" src="images/12.jpg" alt="image12"></ol>
 </ul>
+<div class="save/div>
 <script src="app.js"></script>
 </body>
 </html>
