small bug with typo for button in html file fixed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<ol>v11 <img src="images/11.jpg" alt="image11"></ol>
 	<ol>v12 <img id="11" src="images/12.jpg" alt="image12"></ol>
 </ul>
-<div class="save/div>
+<div class="save">Save</div>
 <script src="app.js"></script>
 </body>
 </html>
