changed grabing by id to data-id attr + after reloading photos from database take their position on grid

--- a/index.html
+++ b/index.html
@@ -8,34 +8,58 @@
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 <body>
-<div class="grid-container">
-	<div id="0" class="grid-item">1</div>
-	<div id="1" class="grid-item">2</div>
-	<div id="2" class="grid-item">3</div>
-	<div id="3" class="grid-item">4</div>
-	<div id="4" class="grid-item">5</div>
-	<div id="5" class="grid-item">6</div>
-	<div id="6" class="grid-item">7</div>
-	<div id="7" class="grid-item">8</div>
-	<div id="8" class="grid-item">9</div>
-	<div id="9" class="grid-item">10</div>
-	<div id="10" class="grid-item">11</div>
-	<div id="11" class="grid-item">12</div>
+<div id="grid-container">
+	<div data-id="0" class="grid-item">
+		<img src="" alt="image:)">
+	</div>
+	<div data-id="1" class="grid-item">
+		<img src="" alt="image:)">
+	</div>
+	<div data-id="2" class="grid-item">
+		<img src="" alt="image:)">
+	</div>
+	<div data-id="3" class="grid-item">
+		<img src="" alt="image:)">
+	</div>
+	<div data-id="4" class="grid-item">
+		<img src="" alt="image:)">
+	</div>
+	<div data-id="5" class="grid-item">
+		<img src="" alt="image:)">
+	</div>
+	<div data-id="6" class="grid-item">
+		<img src="" alt="image:)">
+	</div>
+	<div data-id="7" class="grid-item">
+		<img src="" alt="image:)">
+	</div>
+	<div data-id="8" class="grid-item">
+		<img src="" alt="image:)">
+	</div>
+	<div data-id="9" class="grid-item">
+		<img src="" alt="image:)">
+	</div>
+	<div data-id="10" class="grid-item">
+		<img src="" alt="image:)">
+	</div>
+	<div data-id="11" class="grid-item">
+		<img src="" alt="image:)">
+	</div>
 
 </div>
 <ul>
-	<ol>v1 <img src="images/1.jpg" alt="image1"></ol>
-	<ol>v2 <img src="images/2.jpg" alt="image2"></ol>
-	<ol>v3 <img src="images/3.jpg" alt="image3"></ol>
-	<ol>v4 <img src="images/4.jpg" alt="image4"></ol>
-	<ol>v5 <img src="images/5.jpg" alt="image5"></ol>
-	<ol>v6 <img src="images/6.jpg" alt="image6"></ol>
-	<ol>v7 <img src="images/7.jpg" alt="image7"></ol>
-	<ol>v8 <img src="images/8.jpg" alt="image8"></ol>
-	<ol>v9 <img src="images/9.jpg" alt="image9"></ol>
-	<ol>v10 <img src="images/10.jpg" alt="image10"></ol>
-	<ol>v11 <img src="images/11.jpg" alt="image11"></ol>
-	<ol>v12 <img id="11" src="images/12.jpg" alt="image12"></ol>
+	<ol><img src="images/1.jpg" alt="image1"></ol>
+	<ol><img src="images/2.jpg" alt="image2"></ol>
+	<ol><img src="images/3.jpg" alt="image3"></ol>
+	<ol><img src="images/4.jpg" alt="image4"></ol>
+	<ol><img src="images/5.jpg" alt="image5"></ol>
+	<ol><img src="images/6.jpg" alt="image6"></ol>
+	<ol><img src="images/7.jpg" alt="image7"></ol>
+	<ol><img src="images/8.jpg" alt="image8"></ol>
+	<ol><img src="images/9.jpg" alt="image9"></ol>
+	<ol><img src="images/10.jpg" alt="image10"></ol>
+	<ol><img src="images/11.jpg" alt="image11"></ol>
+	<ol><img id="11" src="images/12.jpg" alt="image12"></ol>
 </ul>
 <div class="save">Save</div>
 <script src="app.js"></script>
