--- a/index.html
+++ b/index.html
@@ -9,40 +9,40 @@
 </head>
 <body>
 <div id="grid-container">
-	<div data-id="0" class="grid-item">
+	<div data-id="0" >
 		<img src="" alt="image:)">
 	</div>
-	<div data-id="1" class="grid-item">
+	<div data-id="1" >
 		<img src="" alt="image:)">
 	</div>
-	<div data-id="2" class="grid-item">
+	<div data-id="2" >
 		<img src="" alt="image:)">
 	</div>
-	<div data-id="3" class="grid-item">
+	<div data-id="3" >
 		<img src="" alt="image:)">
 	</div>
-	<div data-id="4" class="grid-item">
+	<div data-id="4" >
 		<img src="" alt="image:)">
 	</div>
-	<div data-id="5" class="grid-item">
+	<div data-id="5" >
 		<img src="" alt="image:)">
 	</div>
-	<div data-id="6" class="grid-item">
+	<div data-id="6" >
 		<img src="" alt="image:)">
 	</div>
-	<div data-id="7" class="grid-item">
+	<div data-id="7" >
 		<img src="" alt="image:)">
 	</div>
-	<div data-id="8" class="grid-item">
+	<div data-id="8" >
 		<img src="" alt="image:)">
 	</div>
-	<div data-id="9" class="grid-item">
+	<div data-id="9" >
 		<img src="" alt="image:)">
 	</div>
-	<div data-id="10" class="grid-item">
+	<div data-id="10" >
 		<img src="" alt="image:)">
 	</div>
-	<div data-id="11" class="grid-item">
+	<div data-id="11" >
 		<img src="" alt="image:)">
 	</div>
 
