--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>dragdroptest</title>
-	<link rel="stylesheet" href="app.css">
+	<link rel="stylesheet" href="css/app.css">
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
@@ -74,6 +74,6 @@
 	<ol><img id="11" src="images/12.jpg" alt="image12"></ol>
 </ul>
 <div class="save">Save</div>
-<script src="app.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
