--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>dragdroptest</title>
 	<link rel="stylesheet" href="css/app.css">
-	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+	<script src="js/jquery-1.12.4.js"></script>
 	<script src="js/jquery-ui.js"></script>
 </head>
 <body>
