--- a/index.html
+++ b/index.html
@@ -43,23 +43,22 @@
 		<img src="" alt="">
 	</div>
 	<div data-id="11" >
-		<img src="" alt="image:)">
 	</div>
 
 </div>
 <ul>
-	<ol><img src="images/1.jpg" alt="image1"></ol>
-	<ol><img src="images/2.jpg" alt="image2"></ol>
-	<ol><img src="images/3.jpg" alt="image3"></ol>
-	<ol><img src="images/4.jpg" alt="image4"></ol>
-	<ol><img src="images/5.jpg" alt="image5"></ol>
-	<ol><img src="images/6.jpg" alt="image6"></ol>
-	<ol><img src="images/7.jpg" alt="image7"></ol>
-	<ol><img src="images/8.jpg" alt="image8"></ol>
-	<ol><img src="images/9.jpg" alt="image9"></ol>
-	<ol><img src="images/10.jpg" alt="image10"></ol>
-	<ol><img src="images/11.jpg" alt="image11"></ol>
-	<ol><img id="11" src="images/12.jpg" alt="image12"></ol>
+	<ol><img src="images/1.jpg" alt=""></ol>
+	<ol><img src="images/2.jpg" alt=""></ol>
+	<ol><img src="images/3.jpg" alt=""></ol>
+	<ol><img src="images/4.jpg" alt=""></ol>
+	<ol><img src="images/5.jpg" alt=""></ol>
+	<ol><img src="images/6.jpg" alt=""></ol>
+	<ol><img src="images/7.jpg" alt=""></ol>
+	<ol><img src="images/8.jpg" alt=""></ol>
+	<ol><img src="images/9.jpg" alt=""></ol>
+	<ol><img src="images/10.jpg" alt=""></ol>
+	<ol><img src="images/11.jpg" alt=""></ol>
+	<ol><img id="11" src="images/12.jpg" alt=""></ol>
 </ul>
 <div class="save">Save</div>
 <script src="js/app.js"></script>
