--- a/index.html
+++ b/index.html
@@ -11,38 +11,51 @@
 <div id="grid-container">
 	<div data-id="0" >
 		<img src="" alt="">
+		<div class="delete"> X </div>
 	</div>
 	<div data-id="1" >
 		<img src="" alt="">
+		<div class="delete"> X </div>
 	</div>
 	<div data-id="2" >
 		<img src="" alt="">
+		<div class="delete"> X </div>
 	</div>
 	<div data-id="3" >
 		<img src="" alt="">
+		<div class="delete"> X </div>
 	</div>
 	<div data-id="4" >
 		<img src="" alt="">
+		<div class="delete"> X </div>
 	</div>
 	<div data-id="5" >
 		<img src="" alt="">
+		<div class="delete"> X </div>
 	</div>
 	<div data-id="6" >
 		<img src="" alt="">
+		<div class="delete"> X </div>
 	</div>
 	<div data-id="7" >
 		<img src="" alt="">
+		<div class="delete"> X </div>
 	</div>
 	<div data-id="8" >
 		<img src="" alt="">
+		<div class="delete"> X </div>
 	</div>
 	<div data-id="9" >
 		<img src="" alt="">
+		<div class="delete"> X </div>
 	</div>
 	<div data-id="10" >
 		<img src="" alt="">
+		<div class="delete"> X </div>
 	</div>
 	<div data-id="11" >
+		<img src="" alt="">
+		<div class="delete"> X </div>
 	</div>
 
 </div>
