--- a/index.html
+++ b/index.html
@@ -1,79 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>dragdroptest</title>
-	<link rel="stylesheet" href="css/app.css">
-	<script src="js/jquery-1.12.4.js"></script>
-	<script src="js/jquery-ui.js"></script>
-</head>
-<body>
-<div id="grid-container">
-	<div data-id="0" >
-		<img src="" alt="">
-		<div class="delete"> X </div>
-	</div>
-	<div data-id="1" >
-		<img src="" alt="">
-		<div class="delete"> X </div>
-	</div>
-	<div data-id="2" >
-		<img src="" alt="">
-		<div class="delete"> X </div>
-	</div>
-	<div data-id="3" >
-		<img src="" alt="">
-		<div class="delete"> X </div>
-	</div>
-	<div data-id="4" >
-		<img src="" alt="">
-		<div class="delete"> X </div>
-	</div>
-	<div data-id="5" >
-		<img src="" alt="">
-		<div class="delete"> X </div>
-	</div>
-	<div data-id="6" >
-		<img src="" alt="">
-		<div class="delete"> X </div>
-	</div>
-	<div data-id="7" >
-		<img src="" alt="">
-		<div class="delete"> X </div>
-	</div>
-	<div data-id="8" >
-		<img src="" alt="">
-		<div class="delete"> X </div>
-	</div>
-	<div data-id="9" >
-		<img src="" alt="">
-		<div class="delete"> X </div>
-	</div>
-	<div data-id="10" >
-		<img src="" alt="">
-		<div class="delete"> X </div>
-	</div>
-	<div data-id="11" >
-		<img src="" alt="">
-		<div class="delete"> X </div>
-	</div>
+	<head>
+		<meta charset="UTF-8">
+		<title>dragdroptest</title>
+		<link rel="stylesheet" href="css/app.css">
+		<script src="js/jquery-1.12.4.js"></script>
+		<script src="js/jquery-ui.js"></script>
+	</head>
+	<body>
+		<div id="grid-container">
+			<div data-id="0" >
+				<img src="" alt="">
+				<div class="delete"> X </div>
+			</div>
+			<div data-id="1" >
+				<img src="" alt="">
+				<div class="delete"> X </div>
+			</div>
+			<div data-id="2" >
+				<img src="" alt="">
+				<div class="delete"> X </div>
+			</div>
+			<div data-id="3" >
+				<img src="" alt="">
+				<div class="delete"> X </div>
+			</div>
+			<div data-id="4" >
+				<img src="" alt="">
+				<div class="delete"> X </div>
+			</div>
+			<div data-id="5" >
+				<img src="" alt="">
+				<div class="delete"> X </div>
+			</div>
+			<div data-id="6" >
+				<img src="" alt="">
+				<div class="delete"> X </div>
+			</div>
+			<div data-id="7" >
+				<img src="" alt="">
+				<div class="delete"> X </div>
+			</div>
+			<div data-id="8" >
+				<img src="" alt="">
+				<div class="delete"> X </div>
+			</div>
+			<div data-id="9" >
+				<img src="" alt="">
+				<div class="delete"> X </div>
+			</div>
+			<div data-id="10" >
+				<img src="" alt="">
+				<div class="delete"> X </div>
+			</div>
+			<div data-id="11" >
+				<img src="" alt="">
+				<div class="delete"> X </div>
+			</div>
 
-</div>
-<ul>
-	<ol><img src="images/1.jpg" alt=""></ol>
-	<ol><img src="images/2.jpg" alt=""></ol>
-	<ol><img src="images/3.jpg" alt=""></ol>
-	<ol><img src="images/4.jpg" alt=""></ol>
-	<ol><img src="images/5.jpg" alt=""></ol>
-	<ol><img src="images/6.jpg" alt=""></ol>
-	<ol><img src="images/7.jpg" alt=""></ol>
-	<ol><img src="images/8.jpg" alt=""></ol>
-	<ol><img src="images/9.jpg" alt=""></ol>
-	<ol><img src="images/10.jpg" alt=""></ol>
-	<ol><img src="images/11.jpg" alt=""></ol>
-	<ol><img id="11" src="images/12.jpg" alt=""></ol>
-</ul>
-<div class="save">Save</div>
-<script src="js/app.js"></script>
-</body>
+		</div>
+		<ul>
+			<li><img src="images/1.jpg" alt=""></li>
+			<li><img src="images/2.jpg" alt=""></li>
+			<li><img src="images/3.jpg" alt=""></li>
+			<li><img src="images/4.jpg" alt=""></li>
+			<li><img src="images/5.jpg" alt=""></li>
+			<li><img src="images/6.jpg" alt=""></li>
+			<li><img src="images/7.jpg" alt=""></li>
+			<li><img src="images/8.jpg" alt=""></li>
+			<li><img src="images/9.jpg" alt=""></li>
+			<li><img src="images/10.jpg" alt=""></li>
+			<li><img src="images/11.jpg" alt=""></li>
+			<li><img src="images/12.jpg" alt=""></li>
+		</ul>
+		<div class="save">Save</div>
+		<script src="js/app.js"></script>
+	</body>
 </html>
