--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 			</div>
 
 		</div>
+		<div id='draggableList'>
+
 		<ul>
 			<li><img src="images/1.jpg" alt=""></li>
 			<li><img src="images/2.jpg" alt=""></li>
@@ -73,6 +75,7 @@
 			<li><img src="images/11.jpg" alt=""></li>
 			<li><img src="images/12.jpg" alt=""></li>
 		</ul>
+		</div>
 		<div class="save">Save</div>
 		<script src="js/app.js"></script>
 	</body>
